kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alexhoward.io
  namespace: apps
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: alexhoward.io
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: alexhoward.io
    spec:
      containers:
        - name: alexhoward.io
          image: ghcr.io/thezanke/alexhoward.io:latest
          ports:
            - containerPort: 80
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 80
          resources:
            limits:
              cpu: 5m
              memory: 30Mi
            requests:
              cpu: 1m
              memory: 10Mi
      imagePullSecrets:
        - name: ghcr-regcred
