kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alexhoward-io
  namespace: apps
  labels:
    app: alexhoward-io
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: alexhoward-io
